Fixed spacing between navigation items.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -279,11 +279,13 @@
 .nav[data-v-e41e297e] {
   flex-grow: 1;
   white-space: nowrap;
+  font-size: 0;
 }
 .nav-item[data-v-e41e297e] {
   display: inline-block;
   padding: 1.5rem;
   margin: 0;
+  font-size: 1rem;
 }
 .nav-item[data-v-e41e297e]:hover, .nav-item.selected[data-v-e41e297e] {
     color: #2294ff;
